--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -42,6 +42,7 @@
     "date": "तारीख",
     "email": "ईमेल",
     "message": "संदेश",
+    "createdAt": "बनाने की तिथि",
     "name": "नाम",
     "page": "पृष्ठ",
     "of": "में से",
